tooltip sizes on mobile fixed

--- a/src/client/styles/cmps/search-engine/_material-interactions-preview.scss
+++ b/src/client/styles/cmps/search-engine/_material-interactions-preview.scss
@@ -23,11 +23,15 @@
     }
     &-composites {
         &-composite {
-            max-width: rem(180px);
+            max-width: rem(130px);
             background-repeat: no-repeat;
             background-position: rem(0px) center;
             background-size: 14px 16px;
             padding-inline-start: 18px;
+
+            @include for-mobile-layout {
+                max-width: rem(180px);
+            }
 
             &:not(:last-child) {
                 margin-block-end: rem(8px);
@@ -39,9 +43,13 @@
         line-height: rem(29px);
 
         &-interaction {
-            max-width: rem(180px);
+            max-width: rem(130px);
             display: flex;
             align-items: center;
+
+            @include for-mobile-layout {
+                max-width: rem(180px);
+            }
 
             .interaction-icon {
                 display: inline-block;
